# icelk.dev

./: .gitattributes  .gitignore  LICENSE  README.md  change-ip.sh  check-similarity.fish  download-fonts.sh  icelk.dev.ron  ip.txt  jellyfin.ron  md.css  publish.sh  renew.sh  style.css  test.html  test.md  test.php  test.txt  test1.html  test1.txt
arktis/: index.html
doc/: rebuild-docs.fish
doc/errors/: 404.html
doc/public/: index.html  index.md  style.css
doc/systemd-services/: update-doc-icelk.service  update-doc-icelk.timer  watch-icelk-doc-change.service
doc/templates/: standard.html
errors/: 404.html
kvarn/: index.html
public/: .gitignore  cv.html  cv.md  index.html  index2.html  md.css  nav.css  script.js  style.css  test.md  test.no  test.php  test.txt  theme.css
public/admin/: index.html  login.html
public/api/: index.html  index.md
public/articles/: beginner-programming.html  beginner-programming.md  btrfs-overview.html  btrfs-overview.md  code-online.html  code-online.md  dns-unbound-setup.html  dns-unbound-setup.md  index.html  index.md  news-societal-perspective-hurricane-ian.html  news-societal-perspective-hurricane-ian.md  search-engine.html  search-engine.md
public/articles/media/hurricane-ian/: IMG_9620.avif  IMG_9620_01.avif  IMG_9622.avif  IMG_9622_01.avif  IMG_9625.avif  IMG_9625_01.avif  IMG_9636.avif  IMG_9636_01.avif  IMG_9638.avif  IMG_9638_01.avif  IMG_9644.avif  IMG_9644_01.avif  IMG_9646.avif  IMG_9646_01.avif  IMG_9647.avif  IMG_9647_01.avif  IMG_9654.avif  IMG_9654_01.avif  IMG_9662.avif  IMG_9662_01.avif
public/articles/privacy-arguments/: bubbles.html  bubbles.md  index.html  index.md  monopoly.html  monopoly.md  stalker.html  stalker.md
public/cv/: index.html  index.md
public/dns/: index.html  index.md  script.js  style.css
public/fonts/: fonts.css
public/highlight.js/: highlight.pack.js
public/httPWM/: index.html
public/kvarn/: index.html
public/obsidian-school/: install.bat
public/quizlet-learn/: index.html  login.html  script.js  style.css
server/: Cargo.toml  LICENSE
server/src/: main.rs
templates/: markdown.html  standard  standard.html
