[package]
name = "kvarn-icelk"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agde = { version = "0.1.0", path = "../../agde/agde" }
agde-tokio = { version = "0.1.0", path = "../../agde/agde-tokio" }
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
futures-util = "0.3.25"
kvarn = { path = "../../kvarn" }
moella = { path = "../../moella", features = ["bin", "uring"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
select = "0.6.0"
tokio = { version = "1.24", features = ["fs", "macros"] }
tokio-uring = { git = "https://github.com/tokio-rs/tokio-uring" }
trust-dns-resolver = { version = "0.22", features = ["dns-over-tls", "dns-over-rustls"] }
log = { version = "0.4", features = ["release_max_level_info"] }

[profile.release]
opt-level = 3
