[package]
name = "kvarn-icelk"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agde = { version = "0.1.0", path = "../../agde/agde" }
agde-tokio = { version = "0.1.0", path = "../../agde/agde-tokio" }
env_logger = { version = "0.10.0", default-features = false, features = ["auto-color"] }
futures-util = "0.3.25"
kvarn = { path = "../../kvarn" }
moella = { path = "../../moella", features = ["bin", "uring"] }
select = "0.6.0"
tokio = { version = "1.24", features = ["fs", "macros"] }
tokio-uring = { git = "https://github.com/Icelk/tokio-uring", branch = "recvmsg-msg_control" }
trust-dns-resolver = { version = "0.22", features = ["dns-over-tls", "dns-over-rustls"] }
log = { version = "0.4", features = ["release_max_level_info"] }
#kvarn-upload = { version = "0.1.0", path = "../../kvarn-upload", features = ["moella"] }
klimatgrupper-backend = { version = "0.1.0", path = "../../klimatgrupper/backend" }
ureq = { version = "2.7.1", default-features = false, features = ["tls"] }

[profile.release]
opt-level = 3
